After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 680277 - [0.11] wavparse: push mode doesn't work, audiosink complains about gst_segment_to_running_time: assertion `segment->format == format' failed
[0.11] wavparse: push mode doesn't work, audiosink complains about gst_segme...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
0.11.x
Other Linux
: Normal major
: 0.11.x
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-07-19 19:33 UTC by Tim-Philipp Müller
Modified: 2012-07-20 12:14 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Tim-Philipp Müller 2012-07-19 19:33:57 UTC
Starting program: /home/tpm/gst/0.11/gst-plugins-base/tests/examples/playback/.libs/lt-playback-test 0 pushfile:///home/tpm/samples/private/nokia/WAV/Stereotest.wav
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
Setting URI: pushfile:///home/tpm/samples/private/nokia/WAV/Stereotest.wav
Setting URI: (null)
Window realize: video window XID = 48234507
PLAY pipeline
[New Thread 0x7fffed3eb700 (LWP 4353)]
[New Thread 0x7fffe85e7700 (LWP 4356)]
[New Thread 0x7fffe35ac700 (LWP 4357)]
message from "audiosink-actual-sink-pulse" (tag): GstMessageTag, taglist=(GstTagList)NULL;
message from "audiosink-actual-sink-pulse" (warning): GstMessageWarning, gerror=(GError)NULL, debug=(string)"gstbasesink.c\(3105\):\ gst_base_sink_chain_unlocked\ \(\):\ /GstPlayBin:playbin/GstPlaySink:playsink/GstBin:abin/GstAutoAudioSink:audiosink/GstPulseSink:audiosink-actual-sink-pulse:\012Received\ buffer\ without\ a\ new-segment.\ Assuming\ timestamps\ start\ from\ 0.";
[New Thread 0x7fffe2dab700 (LWP 4358)]

(lt-playback-test:4349): GStreamer-CRITICAL **: gst_segment_to_running_time: assertion `segment->format == format' failed
video 0, audio 1, text 0
setting current video track -1
audio 0: taglist, audio-codec=(string)"Uncompressed\ 16-bit\ PCM\ audio";
setting current audio track 0
setting current text track -1
message from "playbin" (new-clock): GstMessageNewClock, clock=(GstClock)"\(GstAudioClock\)\ GstPulseSinkClock";

Program received signal SIGTRAP, Trace/breakpoint trap.

Thread 140737007765248 (LWP 4357)

  • #0 g_logv
    at /tmp/buildd/glib2.0-2.32.3/./glib/gmessages.h line 101
  • #1 g_log
    at /tmp/buildd/glib2.0-2.32.3/./glib/gmessages.c line 792
  • #2 g_return_if_fail_warning
    at /tmp/buildd/glib2.0-2.32.3/./glib/gmessages.c line 801
  • #3 gst_segment_to_running_time
    at gstsegment.c line 467
  • #4 gst_audio_base_sink_render
    at gstaudiobasesink.c line 1710
  • #5 gst_base_sink_chain_unlocked
    at gstbasesink.c line 3187
  • #6 gst_base_sink_chain_main
    at gstbasesink.c line 3295
  • #7 gst_pad_chain_data_unchecked
    at gstpad.c line 3587
  • #8 gst_pad_push_data
    at gstpad.c line 3800
  • #9 gst_pad_chain_data_unchecked
    at gstpad.c line 3587
  • #10 gst_pad_push_data
    at gstpad.c line 3800
  • #11 gst_pad_chain_data_unchecked
    at gstpad.c line 3587
  • #12 gst_pad_push_data
    at gstpad.c line 3800
  • #13 gst_pad_push
    at gstpad.c line 3903
  • #14 gst_base_transform_chain
    at gstbasetransform.c line 2190
  • #15 gst_pad_chain_data_unchecked
    at gstpad.c line 3587
  • #16 gst_pad_push_data
    at gstpad.c line 3800
  • #17 gst_pad_push
    at gstpad.c line 3903
  • #18 gst_base_transform_chain
    at gstbasetransform.c line 2190
  • #19 gst_pad_chain_data_unchecked
    at gstpad.c line 3587
  • #20 gst_pad_push_data
    at gstpad.c line 3800
  • #21 gst_pad_chain_data_unchecked
    at gstpad.c line 3587
  • #22 gst_pad_push_data
    at gstpad.c line 3800
  • #23 gst_pad_push
    at gstpad.c line 3903
  • #24 gst_queue_push_one
    at gstqueue.c line 1045
  • #25 gst_queue_loop
    at gstqueue.c line 1161
  • #26 gst_task_func
    at gsttask.c line 316
  • #27 g_thread_pool_thread_proxy
    at /tmp/buildd/glib2.0-2.32.3/./glib/gthreadpool.c line 309
  • #28 g_thread_proxy
    at /tmp/buildd/glib2.0-2.32.3/./glib/gthread.c line 801
  • #29 start_thread
    at pthread_create.c line 304
  • #30 clone
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S line 112
  • #31 ??

Comment 1 Mark Nauwelaerts 2012-07-20 12:14:00 UTC
commit d90686f722bec3caadc1df63fb98a7f32e473c91
Author: Mark Nauwelaerts <mark.nauwelaerts@collabora.co.uk>
Date:   Fri Jul 20 14:10:41 2012 +0200

    wavparse: clean up push mode segment handling
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=680277