wavparse: clean up push mode segment handling

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=680277